# rag-implementation-with-own-data

./: README.md  pyproject.toml
src/: 1.0_RAG_With_Own_Text.ipynb  2.0_RAG_With_PDF.ipynb  3.0_Simalirity_Search_VectorDB.ipynb  4.0_Docker_Model_Runner.ipynb
